--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.3",
     "element-plus": "^2.2.30",
     "pinia": "^2.0.30",
+    "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
