--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.3",
     "element-plus": "^2.2.30",
+    "mockjs": "^1.1.0",
     "pinia": "^2.0.30",
     "pinia-plugin-persistedstate": "^3.0.2",
     "vue": "^3.2.45",
@@ -21,6 +22,7 @@
     "sass-resources-loader": "^2.2.5",
     "unplugin-auto-import": "^0.14.2",
     "unplugin-vue-components": "^0.23.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
