--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.3",
     "element-plus": "^2.2.30",
     "mockjs": "^1.1.0",
