--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "prettier": "^2.8.4",
     "sass": "^1.58.0",
     "sass-resources-loader": "^2.2.5",
     "unplugin-auto-import": "^0.14.2",
